--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "electron-store": "^8.1.0",
     "langchain": "^0.1.9",
     "node-fetch": "^2.6.1",
+    "pdf-parse": "^1.1.1",
     "web-streams-polyfill": "^3.2.1",
     "xmlhttprequest": "^1.8.0"
   },
