--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cheerio": "^1.0.0-rc.12",
     "dotenv": "^16.3.1",
     "electron-store": "^8.1.0",
+    "faiss-node": "^0.5.1",
     "langchain": "^0.1.9",
     "node-fetch": "^2.6.1",
     "pdf-parse": "^1.1.1",
