--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@langchain/langgraph": "^0.0.7",
     "cheerio": "^1.0.0-rc.12",
     "dotenv": "^16.3.1",
+    "electron-log": "^4.4.8",
     "electron-store": "^8.1.0",
     "faiss-node": "^0.5.1",
     "langchain": "^0.1.9",
