--- a/refactored/package.json
+++ b/refactored/package.json
@@ -5,9 +5,10 @@
   "main": "dist/main/main.js",
   "scripts": {
     "start": "npm run build && electron .",
-    "build": "tsc",
+    "build": "tsc && npm run build:renderer",
+    "build:renderer": "webpack --config webpack.config.js",
     "watch": "tsc -w",
-    "lint": "eslint -c .eslintrc --ext .ts ./src",
+    "lint": "eslint -c .eslintrc --ext .ts,.tsx ./src",
     "test": "jest"
   },
   "dependencies": {
@@ -15,15 +16,24 @@
     "@langchain/core": "^0.1.15",
     "dotenv": "^16.3.1",
     "electron-log": "^5.0.1",
-    "electron-store": "^8.1.0"
+    "electron-store": "^8.1.0",
+    "node-fetch": "^2.7.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "@types/electron": "^1.6.10",
     "@types/node": "^20.8.2",
+    "@types/node-fetch": "^2.6.11",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
     "@typescript-eslint/parser": "^6.7.4",
     "electron": "^26.3.0",
     "eslint": "^8.50.0",
-    "typescript": "^5.2.2"
+    "ts-loader": "^9.2.6",
+    "typescript": "^5.2.2",
+    "webpack": "^5.65.0",
+    "webpack-cli": "^4.9.1"
   }
 }
