--- a/refactored/tsconfig.json
+++ b/refactored/tsconfig.json
@@ -7,7 +7,9 @@
     "outDir": "./dist",
     "rootDir": "./src",
     "sourceMap": true,
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "jsx": "react-jsx",
+    "types": ["node", "electron", "node-fetch"]
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "**/*.spec.ts"]
