--- a/refactored/package.json
+++ b/refactored/package.json
@@ -18,15 +18,16 @@
     "electron-log": "^5.0.1",
     "electron-store": "^8.1.0",
     "node-fetch": "^2.7.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "zustand": "^4.3.8"
   },
   "devDependencies": {
     "@types/electron": "^1.6.10",
     "@types/node": "^20.8.2",
     "@types/node-fetch": "^2.6.11",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
     "@typescript-eslint/parser": "^6.7.4",
     "electron": "^26.3.0",
